--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
-    background-color: rgb(93, 93, 163);
+    background-color: #a14f7e;
+    font-family: Vollkorn;
 }
 
 .title{
@@ -11,6 +12,7 @@ body{
     -webkit-text-fill-color: azure;
     justify-content: center;
     flex-direction: column;
+    user-select: none;
 }
 
 .select{
@@ -24,16 +26,12 @@ body{
     flex: 1;
     height: 70px;
     display: flex;
-    background-color: rgb(13, 70, 70);
+    background-color:#8a6590;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
-.choiceList{
-    background-color: aquamarine;
-    background-size: 100%;
-    width:100%;
-}
 
 .choicebox{
     position: absolute;
@@ -50,7 +48,6 @@ body{
 
 #first{
     display: flex;
-    background-color: aliceblue;
     border-style: solid dotted solid solid;
     border-bottom-left-radius: 5% 10px;
     border-top-left-radius: 5% 10px;
@@ -66,14 +63,59 @@ body{
     border-bottom-right-radius: 5% 10px;
 }
 
+option{
+    text-align: center;
+}
+select{
+    height: 100%;
+    appearance: none;   
+    border: none;
+    text-align: center;
+    outline: none;
+    background-color: transparent;
+    padding: 0 1em 0 0;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: inherit;
+    line-height: inherit;
+}
+
 .button{
-    display: flex;
-    align-self: center;
-    align-content: center;
-    margin: auto;
-    margin-top: 2%;
-    justify-content: center;
-    width: 60%;
-    height: 100px;
-    background-color: tomato;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border-style: solid solid solid dotted;
+    border-top-right-radius: 4% 11px;
+    border-bottom-right-radius: 4% 11px;
+    border-color: transparent;
+    font-family: inherit;
+}
+#button:hover:enabled{
+    background-color: #6c1a1a9c;
+}
+
+:disabled{
+    color: black;
+    background-color: #7923519c;
+}
+
+.text-box{
+    display: none;
+    background-color: #f7f3ff78;
+    box-sizing: border-box;
+    margin-top: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-shadow: -5px -5px 30px 5px red, 5px 5px 30px 5px blue;  
+    border: solid darkred;
+    border-radius: 10px;
+}
+
+.output{
+    margin: 10px;
+    text-indent: 10px;
+    user-select: none;
 }
